@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(libnexstar,0.1-a5, rumen@skyarchive.org)
-AM_INIT_AUTOMAKE(libnexstar,0.1-a5)
+AC_INIT(libnexstar,0.1-a6, rumen@skyarchive.org)
+AM_INIT_AUTOMAKE(libnexstar,0.1-a6)
 AC_CONFIG_SRCDIR([src/])
 AC_CONFIG_HEADER([src/config.h])
 
